# sfml2d

./: .gitignore  CMakeLists.txt  README.md  specyfikacja_gra_platformer.md
assets/: README.txt
src/: Animator.cpp  Animator.h  AudioManager.cpp  AudioManager.h  Coin.cpp  Coin.h  Game.cpp  Game.h  Level.cpp  Level.h  ParallaxLayer.cpp  ParallaxLayer.h  Platform.cpp  Platform.h  Player.cpp  Player.h  main.cpp
